fixed dropdown alignment

--- a/src/style/dropdown.css
+++ b/src/style/dropdown.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-self: stretch;
+    align-self: baseline;
     height: 4rem;
+    width: 100%;
 }
 
 .dropdown-list{
@@ -16,6 +17,7 @@
     position:absolute;
     width: 100%;
     max-height: 12rem;
+    z-index: 1;
 }
 
 .dropdown-list-item{
@@ -25,8 +27,20 @@
     flex-grow: 1;
     justify-content: flex-start;
     cursor: pointer;
+    background-color: #fff;
+    z-index: 1;
 }
 
 .dropdown-list-item:hover {
     background-color: #ddd;
 }
+
+.backdrop {
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+  }
